// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tree > should render nested list 1`] = `
<div>
  <rk-tree
    class="h-full overflow-scroll flex flex-col"
    tabindex="0"
  >
    <!---->
     
    <!---->
     
    <rk-nested-list
      role="tree"
    >
      <rk-node
        aria-current="false"
        aria-expanded="false"
        aria-selected="false"
        data-depth="1"
        data-path="0"
        role="treeitem"
      >
        <div
          class="flex flex-row items-center"
        >
          <!---->
          <rk-icon
            aria-label="expand"
            class="w-4 small"
            data-state="closed"
            data-tag="icon"
            role="img"
            tabindex="-1"
          >
            <i
              aria-hidden="true"
              class="node-closed"
            />
          </rk-icon>
          
          <!---->
           
          <rk-item>
            <!---->
            <!---->
            <!---->
             
            <p>
              Item 1
            </p>
            <!---->
            
            <!---->
          </rk-item>
        </div>
         
        <!---->
        
        <!---->
      </rk-node>
      <rk-node
        aria-current="false"
        aria-expanded="false"
        aria-selected="false"
        data-depth="1"
        data-path="1"
        role="treeitem"
      >
        <div
          class="flex flex-row items-center"
        >
          <!---->
          <rk-icon
            aria-label="expand"
            class="w-4 small"
            data-state="closed"
            data-tag="icon"
            role="img"
            tabindex="-1"
          >
            <i
              aria-hidden="true"
              class="node-closed"
            />
          </rk-icon>
          
          <!---->
           
          <rk-item>
            <!---->
            <!---->
            <!---->
             
            <p>
              Item 2
            </p>
            <!---->
            
            <!---->
          </rk-item>
        </div>
         
        <!---->
        
        <!---->
      </rk-node>
      
    </rk-nested-list>
    <!---->
     
    <!---->
  </rk-tree>
  
</div>
`;

exports[`Tree > should render nested list 2`] = `
<div>
  <rk-tree
    class="another-class"
    tabindex="0"
  >
    <!---->
     
    <!---->
     
    <rk-nested-list
      role="tree"
    >
      <rk-node
        aria-current="false"
        aria-expanded="false"
        aria-selected="false"
        data-depth="1"
        data-path="0"
        role="treeitem"
      >
        <div
          class="flex flex-row items-center"
        >
          <!---->
          <rk-icon
            aria-label="expand"
            class="w-4 small"
            data-state="closed"
            data-tag="icon"
            role="img"
            tabindex="-1"
          >
            <i
              aria-hidden="true"
              class="node-closed"
            />
          </rk-icon>
          
          <!---->
           
          <rk-item>
            <!---->
            <!---->
            <!---->
             
            <p>
              Item 1
            </p>
            <!---->
            
            <!---->
          </rk-item>
        </div>
         
        <!---->
        
        <!---->
      </rk-node>
      <rk-node
        aria-current="false"
        aria-expanded="false"
        aria-selected="false"
        data-depth="1"
        data-path="1"
        role="treeitem"
      >
        <div
          class="flex flex-row items-center"
        >
          <!---->
          <rk-icon
            aria-label="expand"
            class="w-4 small"
            data-state="closed"
            data-tag="icon"
            role="img"
            tabindex="-1"
          >
            <i
              aria-hidden="true"
              class="node-closed"
            />
          </rk-icon>
          
          <!---->
           
          <rk-item>
            <!---->
            <!---->
            <!---->
             
            <p>
              Item 2
            </p>
            <!---->
            
            <!---->
          </rk-item>
        </div>
         
        <!---->
        
        <!---->
      </rk-node>
      
    </rk-nested-list>
    <!---->
     
    <!---->
  </rk-tree>
  
</div>
`;
